--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,17 @@ html, body{height: 100%;}
     overflow-x: hidden;
 }
 
+.sidebar::-webkit-scrollbar{
+    background-color: rgb(0, 0, 0);
+    width: 6px;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+    background-color: rgb(59, 59, 59);
+    border-radius: 4px;
+    border-right: 2px solid black;
+}
+
 .sidebar-wrapper{
     padding-bottom: 200px;
 }
@@ -118,6 +129,17 @@ html, body{height: 100%;}
     overflow-y: auto;
 }
 
+.main::-webkit-scrollbar{
+    background-color: rgb(0, 0, 0);
+    width: 6px;
+}
+
+.main::-webkit-scrollbar-thumb {
+    background-color: rgb(59, 59, 59);
+    border-radius: 4px;
+    border-right: 2px solid black;
+}
+
 .main__row{
     display: flex;
     flex-wrap: wrap;
@@ -140,7 +162,7 @@ html, body{height: 100%;}
 
 .main__col{
     cursor: pointer;
-    width: 14%;
+    width: 15.5%;
     margin-right: 1%;
     margin-top: 20px;
     background-color: #282828;
@@ -234,9 +256,9 @@ html, body{height: 100%;}
     background-color: white;
 }
  
-@media screen and (max-width: 1300px) /* 1700px */ {
+@media screen and (max-width: 1200px) /* 1700px */ {
     .main__col{
-        width: 20%;
+        width: 30%;
     }
 }
 
