--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,6 @@ html, body{height: 100%;}
     font-weight: normal;
     font-size: 20px;
     vertical-align: middle;
-    margin-left: 10px;
 }
 
 .player__artist h3 > span{
@@ -255,19 +254,53 @@ html, body{height: 100%;}
     border-radius: 8px;
     background-color: white;
 }
- 
-@media screen and (max-width: 1200px) /* 1700px */ {
-    .main__col{
+
+@media screen and (max-width: 1315px) {
+
+    .player__artist{
         width: 30%;
     }
 }
 
+@media screen and (max-width: 1250px){
+    
+    .main__col{
+        width: 30%;
+}
+}
+
 @media screen and (max-width: 950px) {
+
     .sidebar{
         width: 25%;
     }
+
     .main{
         width: 75%;
+    }
+
+    .player__control{
+        width: 65%;
+    }
+
+    .player__artist{
+        width: 35%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .player{
+        padding: 20px 10px 20px 10px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .player__control{
+        width: 50%;
+    }
+
+    .player__artist{
+        width: 45%;
     }
 }
 
@@ -293,7 +326,17 @@ html, body{height: 100%;}
     .main{
         padding: 7.5px 25px;
     }
+}
 
+@media screen and (max-width: 630px) {
+
+    .player__artist h3{
+        font-size: 17px;
+    }
+    
+    .player__artist h3 > span{
+        font-size: 10px;
+    }
 }
 
 @media screen and (max-width: 550px) {
@@ -318,6 +361,37 @@ html, body{height: 100%;}
 
     .main__row__title h2{
         font-size: 1.3em;
+    }
+
+    .player{
+        height: 160px;
+        display: block;
+        margin: auto;
+        padding: 10px;
+    }
+
+    .player__artist{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .player__artist img{
+        margin-right: 5px;
+    }
+
+    .player__control{
+        width: 100%;
+    }
+
+    .player__control__progress{
+        width: 70%;
+        margin-top: 10px;
+    }
+
+    .player__control__buttons{
+        margin-top: 15px;
     }
 }
 
